Fixed api gateway
