# api-gateway/api/handlers/models/product.go
@@ -8,4 +8,17 @@ type Product struct {
 	CreatedAt    string `json:"created_at"`
 	UpdatedAt    string `json:"updated_at"`
 	DeletedAt    string `json:"deleted_at"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type CreateProductResponse struct {
+	Id           string
+	ProductName  string
+	ProductPrice int64
+	ProductAbout string
+	CreatedAt    string
+	UpdatedAt    string
+	DeletedAt    string
+	RefreshToken string
+	AccesToken   string
 }
