# api-gateway/api/handlers/v1/product.go
@@ -2,6 +2,7 @@ package v1
 
 import (
 	"context"
+	"fmt"
 	"net/http"
 	"time"
 
@@ -9,6 +10,7 @@ import (
 	"google.golang.org/protobuf/encoding/protojson"
 
 	models "go-exam/api-gateway/api/handlers/models"
+	"go-exam/api-gateway/api/handlers/tokens"
 	pbp "go-exam/api-gateway/genproto/product"
 	l "go-exam/api-gateway/pkg/logger"
 	"go-exam/api-gateway/pkg/utils"
@@ -25,7 +27,7 @@ import (
 // @Success 200 {object} models.Product
 // @Failure 400 {object} models.StandardErrorModel
 // @Failure 500 {object} models.StandardErrorModel
-// @Router /v1/product/ [post]
+// @Router /v1/create/ [post]
 func (h *handlerV1) Create(c *gin.Context) {
 	var (
 		body        models.Product
@@ -45,15 +47,39 @@ func (h *handlerV1) Create(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
+	h.jwthandler = tokens.JWTHandler{
+		Sub:       body.ProductName,
+		Role:      "admin",
+		SigninKey: "admin",
+		Log:       h.log,
+	}
+
+	access, refresh, err := h.jwthandler.GenerateAuthJWT()
+	if err != nil {
+		c.JSON(http.StatusConflict, gin.H{
+			"error": "error while generating jwt",
+		})
+		h.log.Error("error generate new jwt tokens", l.Error(err))
+		return
+	}
+	fmt.Println("Tokens are working well")
+
 	response, err := h.serviceManager.ProductService().Create(ctx, &pbp.Product{
-		Id:           body.Id,
 		ProductName:  body.ProductName,
 		ProductPrice: body.ProductPrice,
 		ProductAbout: body.ProductAbout,
-		CreatedAt:    body.CreatedAt,
-		UpdetedAt:    body.UpdatedAt,
-		DeletedAt:    body.DeletedAt,
+		RefreshToken: refresh,
 	})
+
+	respBody := &models.CreateProductResponse{
+		Id:           response.Id,
+		ProductName:  response.ProductName,
+		ProductPrice: response.ProductPrice,
+		ProductAbout: response.ProductAbout,
+		CreatedAt:    response.CreatedAt,
+		RefreshToken: response.RefreshToken,
+		AccesToken:   access,
+	}
 
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
@@ -63,7 +89,7 @@ func (h *handlerV1) Create(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusCreated, response)
+	c.JSON(http.StatusCreated, respBody)
 }
 
 // Get get product by id
@@ -77,7 +103,7 @@ func (h *handlerV1) Create(c *gin.Context) {
 // @Success 200 {object} models.Product
 // @Failure 400 {object} models.StandardErrorModel
 // @Failure 500 {object} models.StandardErrorModel
-// @Router /v1/product/{id} [get]
+// @Router /v1/get/{id} [get]
 func (h *handlerV1) Get(c *gin.Context) {
 	var jspbMarshal protojson.MarshalOptions
 	jspbMarshal.UseProtoNames = true
@@ -114,7 +140,7 @@ func (h *handlerV1) Get(c *gin.Context) {
 // @Succes 200 {object} models.Product
 // @Failure 400 {object} models.StandardErrorModel
 // @Failure 500 {object} models.StandardErrorModel
-// @Router /v1/product/ [get]
+// @Router /v1/all/ [get]
 func (h *handlerV1) GetAll(c *gin.Context) {
 	queryParams := c.Request.URL.Query()
 
@@ -156,10 +182,11 @@ func (h *handlerV1) GetAll(c *gin.Context) {
 // @Tags product
 // @Accept json
 // @Produce json
+// @Param Product body models.Product true "UpdateProduct"
 // @Succes 200 {Object} models.Product
 // @Failure 400 {object} models.StandardErrorModel
 // @Failure 500 {object} models.StandardErrorModel
-// @Router /v1/product/{id} [put]
+// @Router /v1/update/{id} [put]
 func (h *handlerV1) Update(c *gin.Context) {
 	var (
 		body        pbp.Product
@@ -181,13 +208,13 @@ func (h *handlerV1) Update(c *gin.Context) {
 	defer cancel()
 
 	response, err := h.serviceManager.ProductService().Update(ctx, &pbp.Product{
-		Id: body.Id,
-		ProductName: body.ProductName,
+		Id:           body.Id,
+		ProductName:  body.ProductName,
 		ProductPrice: body.ProductPrice,
 		ProductAbout: body.ProductAbout,
 		CreatedAt:    body.CreatedAt,
-        UpdetedAt:    body.UpdetedAt,
-        DeletedAt:    body.DeletedAt,
+		UpdetedAt:    body.UpdetedAt,
+		DeletedAt:    body.DeletedAt,
 	})
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
@@ -207,15 +234,17 @@ func (h *handlerV1) Update(c *gin.Context) {
 // @Tags product
 // @Accept json
 // @Produce json
+// @Param id path string true "id"
 // @Succes 200 {Object} model.Product
 // @Failure 400 {object} models.StandardErrorModel
 // @Failure 500 {object} models.StandardErrorModel
-// @Router /v1/product/{id} [delete]
+// @Router /v1/delete/{id} [delete]
 func (h *handlerV1) Delete(c *gin.Context) {
 	var jspbMarshal protojson.MarshalOptions
 	jspbMarshal.UseProtoNames = true
 
 	guid := c.Param("id")
+
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
 	defer cancel()
 
